enhance build instructions with detailed time estimates and common issues

--- a/.ai-repo-summary.md
+++ b/.ai-repo-summary.md
@@ -36,6 +36,9 @@ Key targets
 ## Bootstrap and build
 Prefer CMake presets; they configure toolchains and vcpkg integration for you.
 
+Build times and timeouts
+- Configure+deps typically 2–3 minutes; compile 2–3 minutes; tests <1 minute. Don’t cancel long‑running steps in CI; allow 60+ minute timeout budget.
+
 Windows (PowerShell)
 - Optional one-time setup (installs/configures vcpkg, checks prerequisites):
   - `./scripts/setup-windows.ps1`
@@ -47,8 +50,8 @@ Windows (PowerShell)
   - `cmake --build --preset x64-debug`
 
 Linux (bash)
-- Install dependencies automatically:
-  - `./scripts/install-dependencies-deb.sh` (Ubuntu/Debian/Mint)
+- Automated dependency install (Ubuntu/Debian/Mint):
+  - `./scripts/install-dependencies-deb.sh`
 - Configure & build (Release):
   - `cmake --preset linux-release`
   - `cmake --build --preset linux-release`
@@ -58,7 +61,7 @@ Linux (bash)
 
 Manual CMake (only if not using presets)
 - Ensure vcpkg is installed and set `CMAKE_TOOLCHAIN_FILE` (example):
-  - Windows: `-DCMAKE_TOOLCHAIN_FILE=%VCPKG_ROOT%\\scripts\\buildsystems\\vcpkg.cmake`
+  - Windows: `-DCMAKE_TOOLCHAIN_FILE=%VCPKG_ROOT%\scripts\buildsystems\vcpkg.cmake`
   - Linux: `-DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake`
 - Example (Release out-of-source):
   - `cmake -S . -B out/build/release -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=...`
@@ -71,26 +74,29 @@ Notes/gotchas
 - Warnings are elevated via CMake options; MSVC specific warnings 4251/4100 are suppressed where appropriate.
 - OpenSSL, zlib, Crow, Protobuf are resolved via vcpkg; build will fail if toolchain is misconfigured. Prefer presets.
 - Protobuf lifecycle is handled in `OdbDesignLib/App/OdbAppBase.*`.
-
-## Run
-CLI app
-- After building, run `OdbDesignApp` from your build output folder.
-
-Server
-- After building, run `OdbDesignServer` from your build output folder.
-- Endpoints/controllers include: HelloWorld, FileUpload, FileModel, HealthCheck, Designs.
-- The server uses Crow; enable SSL and compression via compile defs (`CROW_ENABLE_SSL`, `CROW_ENABLE_COMPRESSION`). Provide certs/keys as configured in the app if enabling TLS.
-
-Docker
-- Build: `docker build -t odbdesign-server .`
-- Run (compose): `docker compose up`
+- If vcpkg has transient network timeouts (e.g., bzip2/libarchive), you can install `libarchive-dev` via apt and continue; or run `vcpkg install --keep-going`.
 
 ## Test
 - Tests are GoogleTest-based (`OdbDesignTests`). Build with your chosen preset then run tests.
-- If using presets without CTest presets, invoke CTest against the build tree:
-  - Windows (PowerShell): `ctest --test-dir .\\out\\build\\x64-release --output-on-failure`
+- Run with CTest against the build tree:
   - Linux (bash): `ctest --test-dir ./out/build/linux-release --output-on-failure`
-- Alternatively, build and run the `OdbDesignTests` target from your IDE.
+  - Windows (PowerShell): `ctest --test-dir .\out\build\x64-release --output-on-failure`
+- Note: Some tests may require local test data; without it, a subset may fail.
+
+## Run
+CLI app
+- After building, run `OdbDesignApp` from your build output folder (e.g., `./out/build/linux-release/OdbDesignApp/OdbDesignApp --help`).
+
+Server
+- After building, run `OdbDesignServer` from your build output folder.
+  - Linux: `./out/build/linux-release/OdbDesignServer/OdbDesignServer --help` then `--port 8888`
+- Endpoints/controllers include: HelloWorld, FileUpload, FileModel, HealthCheck, Designs.
+- The server uses Crow; enable SSL and compression via compile defs (`CROW_ENABLE_SSL`, `CROW_ENABLE_COMPRESSION`). Provide certs/keys as configured in the app if enabling TLS. If you encounter runtime issues, smoke test with `--help` first.
+
+Docker
+- Build and run via Compose: `docker compose up`
+  - Server: http://localhost:8888
+  - Swagger UI (if exposed by compose): http://localhost:8080/swagger
 
 ## Validation/CI
 - GitHub Actions pipelines build the project, build/publish Docker images, scan images (Docker Scout), perform dependency review, and upload SBOMs. See status badges and links in `docs/README.md`.
@@ -98,6 +104,14 @@ Docker
   - Preset build succeeds in Release and Debug for your platform
   - Tests pass locally (`ctest ...`)
   - If touching server or container files, verify Docker build locally
+  - Use generous timeouts in CI (60+ minutes) to avoid false timeouts on first builds
+
+## Common issues and solutions
+- vcpkg network failures: install `libarchive-dev` via apt as a fallback; then `vcpkg install --keep-going`.
+- Protobuf compilation errors: regenerate via the vcpkg protoc:
+  - `cd OdbDesignLib/protoc`
+  - `$VCPKG_ROOT/../out/build/linux-release/vcpkg_installed/x64-linux/tools/protobuf/protoc --cpp_out=../ProtoBuf *.proto`
+- Precompiled headers (PCH) issues: temporarily disable PCH in CMake if needed by editing the guard around `target_precompile_headers`.
 
 ## Where to make changes
 - Parsing/data model: `OdbDesignLib/FileModel/*`, `OdbDesignLib/ProductModel/*`
@@ -106,9 +120,28 @@ Docker
 - Public headers for consumers: `OdbDesignLib/*.h` (and subfolders)
 - Tests: `OdbDesignTests/*`
 
+## Configuration quick map
+```
+CMakeLists.txt                  # Main build configuration
+CMakePresets.json               # Platform build presets
+vcpkg.json                      # Dependency specification
+vcpkg-configuration.json        # vcpkg registries and config
+Dockerfile                      # Server container build
+compose.yml                     # Docker Compose configuration
+.github/workflows/              # CI/CD pipeline
+docs/BUILD.md                   # Detailed build instructions
+```
+
+## Build output locations
+```
+out/build/linux-release/       # Linux release build
+out/build/linux-debug/         # Linux debug build
+out/build/x64-release/         # Windows release build
+```
+
 ## Helpful links
 - Repo: https://github.com/nam20485/OdbDesign
-- Main docs: `docs/README.md` (includes build/run, security, CI, credits, contact)
+- Main docs: docs/README.md (includes build/run, security, CI, credits, contact)
 - API docs (published site): https://nam20485.github.io/OdbDesign/api
 
 Trust these instructions first. Only search if information is missing or observed to be inaccurate in your environment.
